--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <input class=" py-2 px-5 text-gray-500  border shadow-sm appearance-none leading-tight focus:outline-none focus:shadow-outline" type="text" placeholder="My todo">
             <button class=" text-white bg-blue-500 py-2 px-5">ADD</button>
         </div>
+        <div>
+           
+        </div>
        
     </div>
 </body>
